argo_deploy/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
    name: argo-boot-ser
spec:
    type: ClusterIP
    ports:
        - port: 8001
          targetPort: 7777
    selector:
        app: bootdep
