argo_deploy/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
    name: argo-react-ser
spec:
    type: ClusterIP
    ports:
        - port: 8000
          targetPort: 80
    selector:
        app: reactdep
