argo_deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: argo-ingress
    annotations:
        nginx.ingress.kubernetes.io/ssl-redirect: "false"
        nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
    ingressClassName: nginx
    rules:
        - http:
              paths:
                  - path: /()(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: argo-react-ser
                            port:
                                number: 8000
                  - path: /boot(/|$)(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: argo-boot-ser
                            port:
                                number: 8001
